--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,17 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  postgres_test:
+    image: postgres
+    environment:
+      POSTGRES_DB: 'cloud_storage_test'
+      POSTGRES_USER: 'test-user'
+      POSTGRES_PASSWORD: 'test-password'
+    ports:
+      - '5556:5432'
+    volumes:
+      - postgres_data_test:/var/lib/postgresql/data
+
 volumes:
   postgres_data:
+  postgres_data_test:
