--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
 services:
   postgres:
     image: postgres
+    container_name: postgres
+    networks:
+      - app-network
+    restart: always
     environment:
       POSTGRES_DB: 'cloud_storage'
       POSTGRES_USER: '${DB_USER}'
@@ -12,15 +16,39 @@ services:
 
   postgres_test:
     image: postgres
+    restart: always
     environment:
       POSTGRES_DB: 'cloud_storage_test'
-      POSTGRES_USER: 'test-user'
-      POSTGRES_PASSWORD: 'test-password'
+      POSTGRES_USER: 'test_user'
+      POSTGRES_PASSWORD: 'test_password'
     ports:
       - '5556:5432'
     volumes:
       - postgres_data_test:/var/lib/postgresql/data
 
+  minio:
+    image: minio/minio
+    container_name: minio
+    networks:
+      - app-network
+    restart: always
+    environment:
+      - MINIO_ROOT_USER=${MINIO_ACCESS_KEY}
+      - MINIO_ROOT_PASSWORD=${MINIO_SECRET_KEY}
+    command: server ~/minio --console-address :9090
+    ports:
+      - '9090:9090'
+      - '9000:9000'
+    volumes:
+      - minio_data:/minio
+
+
+networks:
+  app-network:
+    driver: bridge
+
+
 volumes:
   postgres_data:
   postgres_data_test:
+  minio_data:
