--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=cloud-storage
-spring.datasource.url=jdbc:postgresql://localhost:5555/cloud_storage
+spring.datasource.url=jdbc:postgresql://${HOST}:5555/${DB_DATABASE}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -8,4 +8,9 @@ spring.jpa.hibernate.ddl-auto=validate
 
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 spring.liquibase.enabled=true
+
+minio.bucket=${MINIO_BUCKET}
+minio.url=${MINIO_URL}
+minio.accessKey=${MINIO_ACCESS_KEY}
+minio.secretKey=${MINIO_SECRET_KEY}
 
