added upload method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 spring.liquibase.enabled=true
 
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+
 minio.bucket=${MINIO_BUCKET}
 minio.url=${MINIO_URL}
 minio.accessKey=${MINIO_ACCESS_KEY}
