--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,11 @@ minio.url=${MINIO_URL}
 minio.accessKey=${MINIO_ACCESS_KEY}
 minio.secretKey=${MINIO_SECRET_KEY}
 
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
+
+spring.session.store-type=redis
+spring.session.redis.namespace=cloud-storage:session
+spring.session.redis.flush-mode=on-save
+spring.session.timeout=1800
+
