added tests for minio

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,4 +25,7 @@ spring.session.redis.namespace=cloud-storage:session
 spring.session.redis.flush-mode=on-save
 spring.session.timeout=1800
 
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.boot.autoconfigure.web=DEBUG
+logging.level.org.springframework.web.servlet.mvc.method.annotation.ExceptionHandlerExceptionResolver=DEBUG
 
