--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,2 +1,3 @@
-spring.jpa.hibernate.ddl-auto=validate
-spring.liquibase.enabled=true
+#spring.jpa.hibernate.ddl-auto=validate
+#spring.liquibase.enabled=true
+
